--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<title> CARS </title>
+  <body style = "background-color:black">
 <head>
 <title>Page Title</title>
 </head>
