--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <title>CARS</title>
-  <body style = "background-color:black">
+<style>
+  body {background-color:black;}
 <head>
+</style>
+  
 <title>Page Title</title>
 </head>
 <body>
