--- a/index.html
+++ b/index.html
@@ -1,51 +1,22 @@
 <!DOCTYPE html>
 <html>
-<title>PERCY JACKSON</title>
-<body style = "background-color:#0000ff;">
-<style>
-h1 {color: white;}
-h2 {color: white;}
-h3 {color: blue;}
-img {margin-right: 350px; margin-top: -40px;}
-</style>
-<h1><b>Percy Jackson</b></h1>
+<head>
+<title>CARS</title>
+</head>
 <body>
-<img src="PERCY.webp" style="float:right" margin-top: "-100px" width="140" height="210">
-"Non ho scelto io di essere un mezzosangue.
-Se state leggendo questo sito perché pensate di poterlo essere anche voi, vi do un consiglio: chiudetelo all'istante. 
-Essere dei mezzosangue è pericoloso. E' terrificante. Nella maggior parte dei casi, si finisce ammazzati in
-modi orribili e dolorosi. Se invece siete dei ragazzi normali e pensate che questo sia un sito normale, perfetto.
-Continuate a leggere. Ma se vi riconoscete in queste righe - se vi smuovono qualcosa dentro - smettete subito. 
-Potreste essere dei nostri. E quando lo avrete capito, sarà solo questione di tempo perché se ne accorgano anche
-loro e vengano a cercarvi. Non dite che non vi avevo avvertito :)"</body>
-<h2>CHI E'?</h2>
-<body>Il testo descrive Percy Jackson, un ragazzo straordinario il cui destino è legato alle leggende dell'antica mitologia
-greca. Figlio di Poseidone, dio del mare, Percy è un semidio che vive tra il mondo degli dei dell'Olimpo e quello degli esseri 
-umani. La sua vita è pervasa da creature mitologiche, influenze divine e battaglie tra il bene e il male. La sua avventura 
-inizia quando scopre la sua vera identità, catapultandolo in un mondo di pericoli, misteri e magia. Affronta incredibili
-sfide, navigando tra mostri, divinità gelose e oscuri complotti. Lungo il suo viaggio, impara il significato dell'amicizia,
-del coraggio e dell'accettazione di sé mentre cerca di trovare il suo posto nel mondo e difendere ciò in cui crede. Ma questa 
-è solo l'inizio della sua epica avventura. MA QUESTO E' SOLO L'INIZIO!</body>
-<h2>SAGHE PRINCIPALI</h2> 
-<body>
-<img src="foto saga 1.png" style="float:right";margin:top: 1500px;margin:right: 100px";>
-Percy Jackson e gli dei dell'Olimpo</body>
-<ol>
-  <li>Il ladro di fulmini</li>
-  <li>Il mare dei mostri</li>
-  <li>La maledizione del Titano</li>
-  <li>La battaglia del labirinto</li>
-  <li>Lo scontro finale</li>
-</ol>  
-<a href="Seconda pagina.html";">Seconda pagina</a>
-<img src="foto saga 2.png" style="float:right";margin:top: 1500px;margin:right: 100px";>  
-<p>
-<body>Percy Jackson e gli eroi dell'Olimpo</body>
-<ol>
-  <li>L'Eroe Perduto</li>
-  <li>Il figlio di Nettuno</li>
-  <li>Il marchio di Atena</li>
-  <li>La casa di Ade</li>
+Cars - Motori ruggenti è un film d'animazione del 2006 co-scritto e diretto da John Lasseter;
+prodotto da Pixar Animation Studios, in co-produzione con Walt Disney Pictures e distribuito
+da Buena Vista International. Si tratta del 7º lungometraggio Pixar. La pellicola è dedicata
+alla memoria di Joe Ranft, co-autore e co-regista, deceduto in seguito ad un incidente stradale 
+nell'agosto 2005 a 45 anni.[1] Il film ha avuto due sequel: Cars 2 (2011) e Cars 3 (2017), oltre
+che una serie di cortometraggi dedicati. Accolto positivamente dalla critica e dal pubblico, 
+la pellicola ha ricevuto importanti riconoscimenti e due nomination agli Oscar 2007 come miglior 
+film d'animazione (poi andato a Happy Feet) e per la miglior canzone (Our Town, scritta e composta 
+da Randy Newman).
+<h1>CARS</h1>
+<p>SAETTA MCQUIN</p>
+</body>
+</html>
   <li>Il Sangue dell'Olimpo</li>
 </ol> 
 </p>
