--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <head>
 <title>CARS</title>
+<h1>CARS</h1>
 </head>
 <body>
-Cars - Motori ruggenti è un film d'animazione del 2006 co-scritto e diretto da John Lasseter;
-prodotto da Pixar Animation Studios, in co-produzione con Walt Disney Pictures e distribuito
-da Buena Vista International. Si tratta del 7º lungometraggio Pixar. La pellicola è dedicata
-alla memoria di Joe Ranft, co-autore e co-regista, deceduto in seguito ad un incidente stradale 
-nell'agosto 2005 a 45 anni.[1] Il film ha avuto due sequel: Cars 2 (2011) e Cars 3 (2017), oltre
-che una serie di cortometraggi dedicati. Accolto positivamente dalla critica e dal pubblico, 
-la pellicola ha ricevuto importanti riconoscimenti e due nomination agli Oscar 2007 come miglior 
-film d'animazione (poi andato a Happy Feet) e per la miglior canzone (Our Town, scritta e composta 
-da Randy Newman).
-<h1>CARS</h1>
+"Cars" è un film d'animazione del 2006 prodotto dalla Pixar Animation Studios e distribuito dalla Walt 
+Disney Pictures. Il film è ambientato in un mondo abitato da auto antropomorfe e segue le avventure di 
+un giovane autista da corsa di nome Saetta McQueen. Saetta è un'auto da corsa ambiziosa che sogna di 
+vincere la prestigiosa Coppa Piston, ma durante un viaggio verso una gara importante si perde lungo la
+leggendaria Route 66 e finisce in una piccola città chiamata Radiator Springs. Qui incontra una variegatà
+comunità di automobili e impara importanti lezioni di vita dall'incontro con personaggi come il saggio Doc 
+Hudson, il simpatico carro attrezzi Cricchetto e la dolce Porsche Sally. "Cars" è un viaggio di crescita 
+per Saetta McQueen, che impara l'importanza dell'amicizia, dell'umiltà e della solidarietà mentre si confronta
+con i valori della vita semplice e autentica di Radiator Springs. Alla fine, Saetta McQueen trova il vero significato
+della sua vita e il suo posto nel mondo, scoprendo che ci sono cose più importanti della vittoria in una gara.
 <p>SAETTA MCQUIN</p>
 </body>
 </html>
