--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ h2 {color: white;}
 h3 {color: blue;}
 img {margin-right: 350px; margin-top: -40px;}
 body {
-  background-color: lightblue;
+  background-color: red;
      }
 </style>
 <title>CARS</title>
 <h1>CARS</h1>
 </head>
 <body>
-<img src="saetta foto.jpg" style="float:right" margin-top: "-100px" width="140" height="210">
+<img src="saetta foto.jpg" style="float:right" margin-top: "-100px" width="400" height="210">
 "Cars" è un film d'animazione del 2006 prodotto dalla Pixar Animation Studios e distribuito dalla Walt 
 Disney Pictures. Il film è ambientato in un mondo abitato da auto antropomorfe e segue le avventure di 
 un giovane autista da corsa di nome Saetta McQueen. Saetta è un'auto da corsa ambiziosa che sogna di 
