--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ Hudson, il simpatico carro attrezzi Cricchetto e la dolce Porsche Sally. "Cars" 
 per Saetta McQueen, che impara l'importanza dell'amicizia, dell'umiltà e della solidarietà mentre si confronta
 con i valori della vita semplice e autentica di Radiator Springs. Alla fine, Saetta McQueen trova il vero significato
 della sua vita e il suo posto nel mondo, scoprendo che ci sono cose più importanti della vittoria in una gara.
-<p>PERSONAGGI...</p>
+<p>PERSONAGGI...eccetera</p>
 </body>
 </html>
