--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <header>
-        <a href="home_it.html">
+        <a href="index.html">
             <img src="logo_hellas_verona.png" alt="Hellas Verona" id="logo">
         </a>
         <div class="language-buttons">
