--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <img src="logo_hellas_verona.png" alt="Hellas Verona" id="logo">
         </a>
         <div class="language-buttons">
-            <a href="home_it.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
-            <a href="home_eng.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
+            <a href="index.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
+            <a href="index2.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
         </div>
 		<h1>Hellas Verona</h1>
     </header>
@@ -106,22 +106,22 @@
         <section>
             <h2>STORIA</h2>
             <p>La nostra storia.</p>
-            <a href="storia_it.html" class="button">Scopri la storia</a>
+            <a href="index3.html" class="button">Scopri la storia</a>
         </section>
         <section>
             <h2>STADIO</h2>
             <p>La storia dello stadio Marcantonio Bentegodi.</p>
-            <a href="stadio_it.html" class="button">Scopri la storia</a>
+            <a href="index5.html" class="button">Scopri la storia</a>
         </section>
         <section>
             <h2>MAGLIE</h2>
             <p>Maglie di oggi e del passato.</p>
-            <a href="maglie_it.html" class="button">Scopri le maglie</a>
+            <a href="index7.html" class="button">Scopri le maglie</a>
         </section>
         <section>
             <h2>CAMPIONATO STORICO 1984/85</h2>
             <p>La storia dello storico scudetto.</p>
-            <a href="scudetto_it.html" class="button">Scopri la storia</a>
+            <a href="index9.html" class="button">Scopri la storia</a>
         </section>
     </div>
 	<footer>
