--- a/index2.html
+++ b/index2.html
@@ -93,12 +93,12 @@
 </head>
 <body>
     <header>
-        <a href="home_eng.html">
+        <a href="index2.html">
             <img src="logo_hellas_verona.png" alt="Hellas Verona" id="logo">
         </a>
         <div class="language-buttons">
-            <a href="home_it.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
-            <a href="home_eng.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
+            <a href="index.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
+            <a href="index2.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
         </div>
         <h1>Hellas Verona</h1>
     </header>
@@ -106,22 +106,22 @@
         <section>
             <h2>STORY</h2>
             <p>Our story</p>
-            <a href="storia_eng.html" class="button">Discover the story</a>
+            <a href="index4.html" class="button">Discover the story</a>
         </section>
         <section>
             <h2>STADIUM</h2>
             <p>The story of the Marcantonio Bentegodi stadium.</p>
-            <a href="stadio_eng.html" class="button">Discover the story</a>
+            <a href="index6.html" class="button">Discover the story</a>
         </section>
         <section>
             <h2>JERSEY</h2>
             <p>Jerseys from today and the past.</p>
-            <a href="maglie_eng.html" class="button">Discover the jerseys</a>
+            <a href="index8.html" class="button">Discover the jerseys</a>
         </section>
         <section>
             <h2>HISTORICAL CHAMPIONSHIP 1984/85</h2>
             <p>The story of the historic Scudetto.</p>
-            <a href="scudetto_eng.html" class="button">Discover the story</a>
+            <a href="index10.html" class="button">Discover the story</a>
         </section>
     </div>
 	<footer>
