--- a/index3.html
+++ b/index3.html
@@ -176,12 +176,12 @@
 </head>
 <body>
     <header>
-        <a href="home_it.html">
+        <a href="index.html">
             <img src="logo_hellas_verona.png" alt="Hellas Verona" id="logo">
         </a>
         <div class="language-buttons">
-            <a href="storia_it.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
-            <a href="storia_eng.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
+            <a href="index3.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
+            <a href="index4.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
         </div>
         <h1>Hellas Verona</h1>
 		<nav>
@@ -189,11 +189,11 @@
 				<li>
 					<img src="menu_icon.png" alt="Menu" class="menu-icon">
 					<ul>
-						<li><a href="home_it.html">HOME</a></li>
-						<li><a href="storia_it.html">STORIA</a></li>
-						<li><a href="stadio_it.html">STADIO</a></li>
-						<li><a href="maglie_it.html">MAGLIE</a></li>
-						<li><a href="scudetto_it.html">CAMPIONATO</a></li>
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="index3.html">STORIA</a></li>
+						<li><a href="index5.html">STADIO</a></li>
+						<li><a href="index7.html">MAGLIE</a></li>
+						<li><a href="index9.html">CAMPIONATO</a></li>
 					</ul>
 				</li>
 			</ul>
