--- a/index6.html
+++ b/index6.html
@@ -176,12 +176,12 @@
 </head>
 <body>
     <header>
-        <a href="home_eng.html">
+        <a href="index2.html">
             <img src="logo_hellas_verona.png" alt="Hellas Verona" id="logo">
         </a>
         <div class="language-buttons">
-            <a href="stadio_it.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
-            <a href="stadio_eng.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
+            <a href="index5.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
+            <a href="index6.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
         </div>
         <h1>Hellas Verona</h1>
 		<nav>
@@ -189,11 +189,11 @@
 				<li>
 					<img src="menu_icon.png" alt="Menu" class="menu-icon">
 					<ul>
-						<li><a href="home_eng.html">HOME</a></li>
-						<li><a href="storia_eng.html">STORY</a></li>
-						<li><a href="stadio_eng.html">STADIUM</a></li>
-						<li><a href="maglie_eng.html">JERSEY</a></li>
-						<li><a href="scudetto_eng.html">CHAMPIONSHIP</a></li>
+						<li><a href="index2.html">HOME</a></li>
+						<li><a href="index4.html">STORY</a></li>
+						<li><a href="index6.html">STADIUM</a></li>
+						<li><a href="index8.html">JERSEY</a></li>
+						<li><a href="index10.html">CHAMPIONSHIP</a></li>
 					</ul>
 				</li>
 			</ul>
