--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <section>
             <h2>STADIO</h2>
             <p>La storia dello stadio Marcantonio Bentegodi.</p>
-            <a href="index5.html" class="button">Scopri la storia</a>
+            <a href="index5.html" class="button">Scopri lo stadio</a>
         </section>
         <section>
             <h2>MAGLIE</h2>
@@ -121,7 +121,7 @@
         <section>
             <h2>CAMPIONATO STORICO 1984/85</h2>
             <p>La storia dello storico scudetto.</p>
-            <a href="index9.html" class="button">Scopri la storia</a>
+            <a href="index9.html" class="button">Scopri il campionato</a>
         </section>
     </div>
 	<footer>
