--- a/index10.html
+++ b/index10.html
@@ -327,8 +327,8 @@
 			</table>
 		</center>
 	<footer>
-		<p>GIACOMO GIRELLI</p>
-        <p>Contacts: giacomo.girelli1@iismariecurievr.it</p>
+		<p>G.G</p>
+        <p>Contatti: gg@xyz.com</p>
     </footer>
 </body>
 </html>
