--- a/index2.html
+++ b/index2.html
@@ -125,8 +125,8 @@
         </section>
     </div>
 	<footer>
-		<p>GIACOMO GIRELLI</p>
-        <p>Contacts: giacomo.girelli1@iismariecurievr.it</p>
+		<p>G.G</p>
+        <p>Contatti: gg@xyz.com</p>
     </footer>
 </body>
 </html>
