--- a/index3.html
+++ b/index3.html
@@ -241,8 +241,9 @@
 	</p>
 	<img src="oggi.jpg">
 	<footer>
-		<p>GIACOMO GIRELLI</p>
-        <p>Contatti: giacomo.girelli1@iismariecurievr.it</p>
+		<p>G.G</p>
+        <p>Contatti: gg@xyz.com</p>
     </footer>
+
 </body>
 </html>
