--- a/index4.html
+++ b/index4.html
@@ -237,8 +237,8 @@
 		Despite the challenges and changes over the years, Hellas Verona proved to be a resilient and evolving team, ready to face future challenges with determination and commitment.	</p>
 	<img src="oggi.jpg">
 	<footer>
-		<p>GIACOMO GIRELLI</p>
-        <p>Contacts: giacomo.girelli1@iismariecurievr.it</p>
+		<p>G.G</p>
+        <p>Contatti: gg@xyz.com</p>
     </footer>
 </body>
 </html>
