--- a/index5.html
+++ b/index5.html
@@ -219,8 +219,8 @@
 	</p>
 	<img src="curva.png">
 	<footer>
-		<p>GIACOMO GIRELLI</p>
-        <p>Contatti: giacomo.girelli1@iismariecurievr.it</p>
+		<p>G.G</p>
+        <p>Contatti: gg@xyz.com</p>
     </footer>
 </body>
 </html>
