--- a/index6.html
+++ b/index6.html
@@ -217,8 +217,8 @@
 		On 6 April 2014 the Bentegodi hosted for the first, and currently only, time the city's third professional club, Virtus Verona, engaged in Lega Pro against Alessandria.	</p>
 	<img src="curva.png">
 	<footer>
-		<p>GIACOMO GIRELLI</p>
-        <p>Contacts: giacomo.girelli1@iismariecurievr.it</p>
+		<p>G.G</p>
+        <p>Contatti: gg@xyz.com</p>
     </footer>
 </body>
 </html>
