--- a/index7.html
+++ b/index7.html
@@ -226,8 +226,8 @@
 	<p>Questa è la maglia dell'anno successivo allo storico campionato vinto dal Verona nella stagione 1984/1985, con lo scudetto tricolore.</p>
 	<img src="maglia8.jpg">
 	<footer>
-		<p>GIACOMO GIRELLI</p>
-        <p>Contatti: giacomo.girelli1@iismariecurievr.it</p>
+		<p>G.G</p>
+        <p>Contatti: gg@xyz.com</p>
     </footer>
 </body>
 </html>
