--- a/index8.html
+++ b/index8.html
@@ -226,8 +226,8 @@
 	<p>This is the jersey of the year following the historic championship won by Verona in the 1984/85 season, with the tricolour scudetto.</p>
 	<img src="maglia8.jpg">
 	<footer>
-		<p>GIACOMO GIRELLI</p>
-        <p>Contacts: giacomo.girelli1@iismariecurievr.it</p>
+		<p>G.G</p>
+        <p>Contatti: gg@xyz.com</p>
     </footer>
 </body>
 </html>
