--- a/index5.html
+++ b/index5.html
@@ -180,8 +180,8 @@
             <img src="logo_hellas_verona.png" alt="Hellas Verona" id="logo">
         </a>
         <div class="language-buttons">
-            <a href="index5.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
-            <a href="index6.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
+            <button onclick="location.href='index5.html'"><img src="italy.png" alt="Italian" class="flag-icon"></button>
+            <button onclick="location.href='index6.html'"><img src="eng.png" alt="English" class="flag-icon"></button>
         </div>
         <h1>Hellas Verona</h1>
 		<nav>
