--- a/index10.html
+++ b/index10.html
@@ -198,8 +198,8 @@
             <img src="logo_hellas_verona.png" alt="Hellas Verona" id="logo">
         </a>
         <div class="language-buttons">
-            <a href="index9.html"><button onclick="setLanguage('it')"><img src="italy.png" alt="Italian" class="flag-icon"></button></a>
-            <a href="index10.html"><button onclick="setLanguage('en')"><img src="eng.png" alt="English" class="flag-icon"></button></a>
+            <button onclick="location.href='index9.html'"><img src="italy.png" alt="Italian" class="flag-icon"></button>
+            <button onclick="location.href='index10.html'"><img src="eng.png" alt="English" class="flag-icon"></button>
         </div>
         <h1>Hellas Verona</h1>
     </header>
