--- a/index4.html
+++ b/index4.html
@@ -238,7 +238,7 @@
 	<img src="oggi.jpg">
 	<footer>
 		<p>G.G</p>
-        <p>Contatti: gg@xyz.com</p>
+        <p>Contacts: gg@xyz.com</p>
     </footer>
 </body>
 </html>
