--- a/index6.html
+++ b/index6.html
@@ -218,7 +218,7 @@
 	<img src="curva.png">
 	<footer>
 		<p>G.G</p>
-        <p>Contatti: gg@xyz.com</p>
+        <p>Contacts: gg@xyz.com</p>
     </footer>
 </body>
 </html>
