--- a/index8.html
+++ b/index8.html
@@ -227,7 +227,7 @@
 	<img src="maglia8.jpg">
 	<footer>
 		<p>G.G</p>
-        <p>Contatti: gg@xyz.com</p>
+        <p>Contacts: gg@xyz.com</p>
     </footer>
 </body>
 </html>
