--- a/index10.html
+++ b/index10.html
@@ -328,7 +328,7 @@
 		</center>
 	<footer>
 		<p>G.G</p>
-        <p>Contatti: gg@xyz.com</p>
+        <p>Contacts: gg@xyz.com</p>
     </footer>
 </body>
 </html>
