--- a/index10.html
+++ b/index10.html
@@ -319,7 +319,7 @@
 						<td>0</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Claudio_Garella">18. Claudio Garella</a><</td>
+						<td><a href="https://it.wikipedia.org/wiki/Claudio_Garella">18. Claudio Garella</a></td>
 						<td>29</td>
 						<td>-19 (conceded)</td>
 					</tr>
