--- a/index9.html
+++ b/index9.html
@@ -235,92 +235,92 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Giuseppe_Galderisi">1. Giuseppe Galderisi</td>
+						<td><a href="https://it.wikipedia.org/wiki/Giuseppe_Galderisi">1. Giuseppe Galderisi</a></td>
 						<td>29</td>
 						<td>11</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Hans-Peter_Briegel">2. Hans-Peter Briegel</td>
+						<td><a href="https://it.wikipedia.org/wiki/Hans-Peter_Briegel">2. Hans-Peter Briegel</a></td>
 						<td>27</td>
 						<td>9</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Preben_Elkjær_Larsen">3. Preben Elkjær Larsen</td>
+						<td><a href="https://it.wikipedia.org/wiki/Preben_Elkjær_Larsen">3. Preben Elkjær Larsen</a></td>
 						<td>23</td>
 						<td>8</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Antonio_Di_Gennaro">4. Antonio Di Gennaro</td>
+						<td><a href="https://it.wikipedia.org/wiki/Antonio_Di_Gennaro">4. Antonio Di Gennaro</a></td>
 						<td>29</td>
 						<td>4</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Pierino_Fanna">5. Pierino Fanna</td>
+						<td><a href="https://it.wikipedia.org/wiki/Pierino_Fanna">5. Pierino Fanna</a></td>
 						<td>29</td>
 						<td>2</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Luciano_Marangon">6. Luciano Marangon</td>
+						<td><a href="https://it.wikipedia.org/wiki/Luciano_Marangon">6. Luciano Marangon</a></td>
 						<td>29</td>
 						<td>2</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Silvano_Fontolan">7. Silvano Fontolan</td>
+						<td><a href="https://it.wikipedia.org/wiki/Silvano_Fontolan">7. Silvano Fontolan</a></td>
 						<td>28</td>
 						<td>1</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Luciano_Bruni">8. Luciano Bruni</td>
+						<td><a href="https://it.wikipedia.org/wiki/Luciano_Bruni">8. Luciano Bruni</a></td>
 						<td>27</td>
 						<td>1</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Luigi_Sacchetti">9. Luigi Sacchetti</td>
+						<td><a href="https://it.wikipedia.org/wiki/Luigi_Sacchetti">9. Luigi Sacchetti</a></td>
 						<td>23</td>
 						<td>8</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Roberto_Tricella">10. Roberto Tricella</td>
+						<td><a href="https://it.wikipedia.org/wiki/Roberto_Tricella">10. Roberto Tricella</a></td>
 						<td>30</td>
 						<td>0</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Domenico_Volpati">11. Domenico Volpati</td>
+						<td><a href="https://it.wikipedia.org/wiki/Domenico_Volpati">11. Domenico Volpati</a></td>
 						<td>30</td>
 						<td>0</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Mauro_Ferroni">12. Mauro Ferroni</td>
+						<td><a href="https://it.wikipedia.org/wiki/Mauro_Ferroni">12. Mauro Ferroni</a></td>
 						<td>20</td>
 						<td>0</td>
 					</tr>
 					 <tr>
-						<td><a href="https://it.wikipedia.org/wiki/Franco_Turchetta">13. Franco Turchetta</td>
+						<td><a href="https://it.wikipedia.org/wiki/Franco_Turchetta">13. Franco Turchetta</a></td>
 						<td>16</td>
 						<td>0</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Dario_Donà">14. Dario Donà</td>
+						<td><a href="https://it.wikipedia.org/wiki/Dario_Donà">14. Dario Donà</a></td>
 						<td>12</td>
 						<td>0</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Fabio_Marangon">15. Fabio Marangon</td>
+						<td><a href="https://it.wikipedia.org/wiki/Fabio_Marangon">15. Fabio Marangon</a></td>
 						<td>3</td>
 						<td>0</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Sergio_Spuri">16. Sergio Spuri</td>
+						<td><a href="https://it.wikipedia.org/wiki/Sergio_Spuri">16. Sergio Spuri</a></td>
 						<td>1</td>
 						<td>0</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Antonio_Terracciano">17. Antonio Terracciano</td>
+						<td><a href="https://it.wikipedia.org/wiki/Antonio_Terracciano">17. Antonio Terracciano</a></td>
 						<td>0</td>
 						<td>0</td>
 					</tr>
 					<tr>
-						<td><a href="https://it.wikipedia.org/wiki/Claudio_Garella">18. Claudio Garella</td>
+						<td><a href="https://it.wikipedia.org/wiki/Claudio_Garella">18. Claudio Garella</a></td>
 						<td>29</td>
 						<td>-19 (subiti)</td>
 					</tr>
