--- a/index5.html
+++ b/index5.html
@@ -209,8 +209,10 @@
 		Il record di spettatori del Bentegodi ampliato e coperto si avrà il 6 novembre 1988 con un Verona-Milan da 47.798 spettatori (35.077 paganti e 12.721 abbonati), inferiore di 98 persone al record del 1983.
 		Fu anche sede della finale del campionato di rugby 1996-97 tra Benetton Treviso e Milan, incontro vinto dai veneti per 34-29.
 	</p>
+	<figure>
 	<img src="dopocostruzione.jpg">
 	<figcaption>Lo stadio Bentegodi poco dopo la sua costruzione</figcaption>
+	</figure>
 	<h3>LA STORICA CURVA SUD</h3>
 	<p>La curva Sud è storicamente riservata ai tifosi dell'Hellas Verona, mentre dalla stagione 2015-16 la curva Nord è riservata ai supporter del Chievo, dopo una piccola "lotta" durata diversi anni per ottenere la curva che, per motivi organizzativi, il comune non concedeva loro; conseguentemente, i tifosi ospiti prendono posto nella curva Nord Superiore in occasione delle partite casalinghe degli scaligeri, e nella curva Sud Superiore in occasione delle sfide interne dei clivensi. La tribuna Ovest (lato delle panchine) è invece attrezzata per la stampa[7]. Il terreno di gioco misura 105x68 m.
 		Tra luglio e dicembre del 2009 sulla copertura del Bentegodi è stato installato un impianto fotovoltaico del valore di circa 4 milioni di euro e della potenza nominale di circa 1 MW (9591 m² di pannelli per una potenza di 999 kWp), diventando così il primo stadio solare d'Italia ed il più grande impianto fotovoltaico d'Italia su una struttura sportiva, grazie all'installazione di 13 328 pannelli solari; con il ricavato dall'energia prodotta vengono coperti ampiamente i costi di manutenzione dell'impianto sportivo.
