--- a/index6.html
+++ b/index6.html
@@ -208,8 +208,10 @@
 		In the 1984-85 season it was the scene of Verona winning the Scudetto, while the 2000-01 season saw Chievo's first promotion to Serie A. In 1985 construction work began on the third ring and the roof, in preparation for the 1990 World Cup in Italy. The stadium was then enlarged but without a significant change in the number of seats as the escape routes were widened and numbered seats were installed. In the 1990 World Cup Italy, the Bentegodi hosted Group E (Belgium, South Korea, Spain, Uruguay) and the round of 16 between Spain and Yugoslavia. 
 		The spectator record for the enlarged and roofed Bentegodi came on 6 November 1988 with a Verona-Milan match with 47,798 spectators (35,077 paying fans and 12,721 season ticket holders), 98 fewer than the 1983 record.
 		It was also the venue for the 1996-97 rugby championship final between Benetton Treviso and AC Milan, a match won by the Venetians 34-29.	</p>
+	<figure>
 	<img src="dopocostruzione.jpg">
 	<figcaption>The Bentegodi stadium shortly after its construction</figcaption>
+	</figure>
 	<h3>THE HISTORIC SOUTH CURVE</h3>
 	<p>The South Curve has historically been reserved for Hellas Verona fans, while since the 2015-16 season the North Curve has been reserved for Chievo supporters, after a small 'struggle' lasting several years to obtain the corner that, for organisational reasons, the municipality did not grant them; consequently, visiting fans take their seats in the Upper North Curve during the Scaligeri's home games, and in the Upper South Curve during the home matches of the Clivens fans. The West Stand (bench side) is instead equipped for the press[7]. The pitch measures 105x68 m.
 		Between July and December 2009 a photovoltaic system worth around 4 million euros and with a nominal power of around 1 MW (9591 m² of panels for a power output of 999 kWp) was installed on the roof of the Bentegodi, making it the first solar stadium in Italy and the largest photovoltaic system in Italy on a sports facility, thanks to the installation of 13,328 solar panels; the proceeds from the energy produced amply cover the maintenance costs of the sports facility.
