--- a/index9.html
+++ b/index9.html
@@ -222,8 +222,10 @@
 		Pur a fronte delle insidie proposte in avvio dal calendario, gli scaligeri — a punteggio pieno nel mese di settembre — uscirono indenni dalle trasferte con Inter e Roma imponendosi invece a domicilio contro Juventus e Fiorentina: a siglare il definitivo raddoppio sui bianconeri fu l'attaccante danese, con la rete rimasta celebre per via dello scarpino perso dal giocatore durante l'azione che portò al gol. Espugnato il campo di un Torino capace di contendere a sorpresa il primato agli uomini di Bagnoli, un lieve rallentamento non precluse l'inedita conquista del titolo invernale: il giro di boa fu concluso dalla sconfitta di misura con l'Avellino. Sul principio della tornata conclusiva i milanesi operarono un effimero aggancio, coi veneti nuovamente da soli in testa nel mese di febbraio.
 		Giunta ad accumulare in primavera un vantaggio di 4 lunghezze sulla compagine di Castagner, la formazione conobbe l'unico altro passo a vuoto del proprio torneo inciampando in casa per mano dei granata: mentre al gruppo delle inseguitrici si aggiunsero Sampdoria e Juventus, a porre un'ipoteca sul titolo fu la vittoria contro la Lazio che certificò l'aritmetica retrocessione di quest'ultima. Il primo titolo di massima serie della storia scaligera recò quindi la data del 12 maggio 1985, dopo un pari sul terreno dell'Atalanta che assicurò la vittoria del campionato con 90' di anticipo: impostosi a danno degli irpini nel turno finale, il Verona terminò la stagione con 43 punti sopravanzando un Torino che fece sua la seconda posizione a −4 dai gialloblu.
 		In Coppa Italia la squadra — dopo un'agevole qualificazione nella fase a gruppi — eliminò il Genoa negli ottavi di finale, per poi arrendersi all'Inter nel turno successivo.    </p>
+	<figure>
 	<img src="allenatore.jpg">
 	<figcaption>L'allenatore Bagnoli viene portato in trionfo dalla squadra per la vittoria dello Scudetto</figcaption>
+	</figure>
 	<p>«Oggi non ci rendiamo conto di quale impresa abbiamo realizzato, ma sarà il corso del tempo a farcelo capire.»</p>
 	<h3>STATISTICHE GIOCATORI</h3>
 	<center>
