--- a/index8.html
+++ b/index8.html
@@ -202,26 +202,26 @@
 	<h3>JERSEY FROM THE PRESENT</h3>
 	<h4>FIRST JERSEY 2023/24</h4>
 	<p>The home shirt of Hellas Verona traditionally features the colours yellow and blue, which have become symbols of the team throughout its history.</p>
-	<img src="maglia1.jpg">
+	<img src="maglia1.jpg"alt="maglia casalinga verona">
 	<h4>SECOND JERSEY 2023/24</h4>
 	<p>The away1 (away) shirt of Hellas Verona is generally yellow, offering a sharp contrast to the yellow-blue home shirt.</p>
-	<img src="maglia2.jpg">
+	<img src="maglia2.jpg"alt="maglia trasferta verona">
 	<h4>THIRD JERSEY 2023/24</h4>
 	<p>The away2 (away) shirt of Hellas Verona is generally white in colour, offering a sharp contrast to the yellow-blue home shirt.</p>
-	<img src="maglia3.jpg">
+	<img src="maglia3.jpg"alt="seconda maglia trasferta">
 	<h4>FIRST JERSEY 2021/22</h4>
 	<p>This shirt was used by Verona in the season in which they finished 9th in the league table.</p>
-	<img src="maglia4.jpg">
+	<img src="maglia4.jpg"alt="maglia dei 120 anni">
 	<h4>120-YEAR JERSEY</h4>
 	<p>This is the jersey dedicated to the 120th anniversary of the company's creation.</p>
-	<img src="maglia6.jpg">
+	<img src="maglia6.jpg"alt="maglia dei 100 anni">
 	<h3>JERSEY FROM THE PAST</h3>
 	<h4>100-YEAR JERSEY</h4>
 	<p>This is the jersey dedicated to 100 years since the creation of the company.</p>
-	<img src="maglia5.jpg">
+	<img src="maglia5.jpg"alt="maglia del campionato vinto dal verona">
 	<h4>FIRST JERSEY 1984/85</h4>
 	<p>This is the shirt from the historic championship won by Verona in the 1984/1985 season</p>
-	<img src="maglia7.jpg">
+	<img src="maglia7.jpg"alt="maglia successiva alla vittoria dello scudetto">
 	<h4>FIRST JERSEY 1985/86</h4>
 	<p>This is the jersey of the year following the historic championship won by Verona in the 1984/85 season, with the tricolour scudetto.</p>
 	<img src="maglia8.jpg">
