--- a/index7.html
+++ b/index7.html
@@ -202,29 +202,29 @@
 	<h3>MAGLIE DEL PRESENTE</h3>
 	<h4>PRIMA MAGLIA 2023/24</h4>
 	<p>La maglia casalinga dell'Hellas Verona è tradizionalmente caratterizzata dai colori giallo e blu, che sono diventati simbolo della squadra nel corso della sua storia.</p>
-	<img src="maglia1.jpg">
+	<img src="maglia1.jpg" alt="maglia casalinga verona">
 	<h4>SECONDA MAGLIA 2023/24</h4>
 	<p>La maglia away1 (da trasferta) dell'Hellas Verona è generalmente di colore giallo, offrendo un contrasto netto rispetto alla maglia casalinga giallo-blu.</p>
-	<img src="maglia2.jpg">
+	<img src="maglia2.jpg" alt="maglia trasferta verona">
 	<h4>TERZA MAGLIA 2023/24</h4>
 	<p>La maglia away2 (da trasferta) dell'Hellas Verona è generalmente di colore bianco, offrendo un contrasto netto rispetto alla maglia casalinga giallo-blu.</p>
-	<img src="maglia3.jpg">
+	<img src="maglia3.jpg" alt="seconda maglia trasferta">
 	<h4>PRIMA MAGLIA 2021/22</h4>
 	<p>Questa maglia è stata utilizzata dal Verona nella stagione in cui è arrivata al 9° posto in classifica.</p>
-	<img src="maglia4.jpg">
+	<img src="maglia4.jpg" alt="maglia dei 120 anni">
 	<h4>MAGLIA DEI 120 ANNI</h4>
 	<p>Questa è la maglia dedicata ai 120 anni dalla creazione della società.</p>
-	<img src="maglia6.jpg">
+	<img src="maglia6.jpg" alt="maglia dei 100 anni">
 	<h3>MAGLIE DEL PASSATO</h3>
 	<h4>MAGLIA DEI 100 ANNI</h4>
 	<p>Questa è la maglia dedicata ai 100 anni dalla creazione della società.</p>
-	<img src="maglia5.jpg">
+	<img src="maglia5.jpg" alt="maglia del campionato vinto dal verona">
 	<h4>PRIMA MAGLIA 1984/85</h4>
 	<p>Questa è la maglia dello storico campionato vinto dal Verona nella stagione 1984/1985</p>
-	<img src="maglia7.jpg">
+	<img src="maglia7.jpg" alt="maglia sauccessiva alla vittoria dello scudetto">
 	<h4>PRIMA MAGLIA 1985/86</h4>
 	<p>Questa è la maglia dell'anno successivo allo storico campionato vinto dal Verona nella stagione 1984/1985, con lo scudetto tricolore.</p>
-	<img src="maglia8.jpg">
+	<img src="maglia8.jpg" alt="maglia verona">
 	<footer>
 		<p>G.G</p>
         <p>Contatti: gg@xyz.com</p>
