--- a/index3.html
+++ b/index3.html
@@ -245,7 +245,7 @@
 		Nella stagione 2021-22, nonostante un cambio di allenatore con l'arrivo di Eusebio Di Francesco, l'Hellas Verona ha continuato a ottenere risultati solidi, concludendo la stagione al nono posto in classifica. I gol di Giovanni Simeone, Gianluca Caprari e Antonín Barák hanno contribuito al successo della squadra, confermandola come una delle forze emergenti nel calcio italiano.
 		Nonostante le sfide e i cambiamenti nel corso degli anni, l'Hellas Verona ha dimostrato di essere una squadra resiliente e in continua evoluzione, pronta a affrontare le sfide future con determinazione e impegno.
 	</p>
-	<img src="oggi.jpg">
+	<img src="oggi.jpg" alt="121 anni della nascita del hellas">
 	<footer>
 		<p>G.G</p>
         <p>Contatti: gg@xyz.com</p>
