--- a/index4.html
+++ b/index4.html
@@ -241,7 +241,7 @@
 		In the 2020s, Hellas Verona continued its consolidation in Serie A, demonstrating greater stability and consistency in results. Under the leadership of Ivan Jurić, the team has maintained a firm position at the top of the table, proving to be a competitive force in Italian football. The contribution of players like Miguel Veloso, Darko Lazovic and Mattia Zaccagni has been crucial to the team's continued success.
 		In the 2021-22 season, despite a change of coach with the arrival of Eusebio Di Francesco, Hellas Verona continued to achieve solid results, finishing the season in ninth place in the league table. Goals from Giovanni Simeone, Gianluca Caprari and Antonín Barák contributed to the team's success, confirming them as one of the emerging forces in Italian football.
 		Despite the challenges and changes over the years, Hellas Verona proved to be a resilient and evolving team, ready to face future challenges with determination and commitment.	</p>
-	<img src="oggi.jpg">
+	<img src="oggi.jpg" alt="121 anni dalla nascita del hellas">
 	<footer>
 		<p>G.G</p>
         <p>Contacts: gg@xyz.com</p>
