--- a/index5.html
+++ b/index5.html
@@ -219,7 +219,7 @@
 		Il 13 ottobre 2010 l'impianto ospitò un incontro della nazionale di rugby a 15 dell'Italia, contro l'Argentina e terminato con la sconfitta degli Azzurri con il punteggio di 16 a 22.
 		Il 6 aprile 2014 il Bentegodi ospitò per la prima, e allo stato attuale unica, volta il terzo club professionistico cittadino, il Virtus Verona, impegnato in Lega Pro contro l'Alessandria.
 	</p>
-	<img src="curva.png">
+	<img src="curva.png" alt="curva verona">
 	<footer>
 		<p>G.G</p>
         <p>Contatti: gg@xyz.com</p>
