--- a/index6.html
+++ b/index6.html
@@ -217,7 +217,7 @@
 		Between July and December 2009 a photovoltaic system worth around 4 million euros and with a nominal power of around 1 MW (9591 m² of panels for a power output of 999 kWp) was installed on the roof of the Bentegodi, making it the first solar stadium in Italy and the largest photovoltaic system in Italy on a sports facility, thanks to the installation of 13,328 solar panels; the proceeds from the energy produced amply cover the maintenance costs of the sports facility.
 		On 13 October 2010, the facility hosted a match of Italy's national rugby team of 15 against Argentina, which ended with the defeat of the Azzurri with a score of 16 to 22.
 		On 6 April 2014 the Bentegodi hosted for the first, and currently only, time the city's third professional club, Virtus Verona, engaged in Lega Pro against Alessandria.	</p>
-	<img src="curva.png">
+	<img src="curva.png" alt="curva verona">
 	<footer>
 		<p>G.G</p>
         <p>Contacts: gg@xyz.com</p>
